# navigation2_dynamic

nav2_dynamic_bringup/: README.md
nav2_dynamic_bringup/rviz/: carla_nav2_dynamic.rviz
nav2_dynamic_motion_model/: CMakeLists.txt  package.xml
nav2_dynamic_motion_model/include/nav2_dynamic_motion_model/: constant_velocity_model.hpp  motion_model_base.hpp  motion_model_interface.hpp
nav2_dynamic_motion_model/src/: constant_velocity_model.cpp
nav2_dynamic_util/: CMakeLists.txt  package.xml
nav2_dynamic_util/include/nav2_dynamic_util/: tracked_obstacle_utils.hpp
nav2_dynamic_util/src/: test_util_node.cpp  tracked_obstacle_publisher.cpp  tracked_obstacle_utils.cpp
